--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = "http://example.org/"
 languageCode = "zh-CN"
-title = "貓妖開源情報導航站"
+title = "爱分享综合导航站"
 theme = "hugo-webstack"
 
 #true:允许大写字母url路径，false:将url路径转换成小写
