--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -6,7 +6,7 @@
     - title: YouTube
       logo: 
       url: https://www.youtube.com/channel/UCgV1t5fHFvAVPyprEWvuIzg/
-      description: 一个专注于软件安装，科学上网教学的频道！
+      description: 一个专注于开源情报教学的频道！
     - title: 资源博客
       qrcode: images/qrcodes/bk.png
       logo:  images/logos/kjgxa999f-kjgx1fr3l-001.ico
