--- a/hugo.toml
+++ b/hugo.toml
@@ -7,11 +7,11 @@ theme = "hugo-webstack"
 disablePathToLower = true
 
 #页脚：作者名字
-copyright = "afx"
+copyright = "貓妖"
 
 #网站信息，不显示，仅供搜索引擎参考
 [params]
-  keywords = "网址导航,webstack,hugo,vpn,科学上网，免费节点，爱分享，科技共享"
+  keywords = "网址导航,webstack,hugo,開源情報,科学學習，AI工具，財務自由，科技前沿"
   description = "Webstack Hugo版主题,网址导航"
 
 #是否开启搜索栏，true开启，false关闭
