--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -63,7 +63,7 @@
       url: https://esim.5ber.com/?language=en-US&utm_source=kjgx&utm_medium=kjgx&utm_campaign=kjgx
       description: 让国行手机也有eSIM功能
 
-- taxonomy: 社区咨询
+- taxonomy: 開源情報工具
   icon: fa-regular fa-newspaper
   links: 
     - title: 雷锋网
