--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -1,3 +1,4 @@
+
 ---
 
 - taxonomy: 常用推荐
@@ -6,7 +7,7 @@
     - title: YouTube
       logo: 
       url: https://www.youtube.com/channel/UCgV1t5fHFvAVPyprEWvuIzg/
-      description: 一个专注于开源情报教学的频道！
+      description: 一个专注于软件安装，科学上网教学的频道！
     - title: 资源博客
       qrcode: images/qrcodes/bk.png
       logo:  images/logos/kjgxa999f-kjgx1fr3l-001.ico
@@ -63,7 +64,7 @@
       url: https://esim.5ber.com/?language=en-US&utm_source=kjgx&utm_medium=kjgx&utm_campaign=kjgx
       description: 让国行手机也有eSIM功能
 
-- taxonomy: 開源情報工具
+- taxonomy: 社区咨询
   icon: fa-regular fa-newspaper
   links: 
     - title: 雷锋网
@@ -116,15 +117,15 @@
       description: UI设计师学习交流社区
     
 
-- taxonomy: AI工具
+- taxonomy: 灵感采集
   icon: fa-regular fa-lightbulb
   list: 
-    - term: AI工具集大成網站，各類模型在線直接用。
+    - term: 发现产品
       links:
         - title: Producthunt
-          logo: 
-          url: https://chatnio.net/
-          description:用不完的模型
+          logo: images/logos/producthunt.png
+          url: https://www.producthunt.com/
+          description: 发现新鲜有趣的产品
         - title: NEXT
           logo: images/logos/NEXT.png
           url: https://next.36kr.com/posts
